ChangeView with debug Panel: OK
Former-commit-id: e58a2f3e70f456f344e0b66da0aff0f38822d8d7

--- a/src/view/Debug/Debug.css
+++ b/src/view/Debug/Debug.css
@@ -4,7 +4,7 @@ button, select {
 }
 
 
-div.Debug > div {
+div.Debug {
     background-color: #626262;
 }
 
@@ -19,4 +19,8 @@ div.Debug > div > div {
     background-color: #333333;
     border: #333333 1px solid;
     border-radius: 1rem;
+}
+
+div.Debug * {
+    color : white
 }
