Start AskName && add Dark Theme
Former-commit-id: 03f949c8bf2cbc2631b93840d3c80178d37e71f2

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,9 @@ div.component.scenarioTitle {
 
 
 div.App {
-    background-color: #afb6bb;
+    background-color: #808e95
+
+;
     display: flex;
     flex-direction: row;
 }
