--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,11 @@
     transform: scale(1.05);
 }
 
+.btn-warning {
+    color: #212529;
+    background-color: #ffc107;
+    border-color: #ffc107;
+}
 .btn-info {
     background-color: #3aa6ff;
     color:white;
