--- a/src/view/Global/AskName/AskName.css
+++ b/src/view/Global/AskName/AskName.css
@@ -6,7 +6,7 @@ div.names {
     height: 70vh;
 }
 
-div.names > * {
+div.names > button {
     width: calc(100% / 4 - 1rem);
     height: calc(100% / 4 - 3rem);
     font-size: calc(1vw + 0.75rem)
