--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,32 @@
 .btn {
     display: inline-block;
     font-weight: 400;
-    color: #212529;
     text-align: center;
     vertical-align: middle;
-    user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    font-size: calc(1vw + 0.75rem);
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
 }
 
+@keyframes scaleUp {
+    0% {
+        transform: scale(1)
+    }
+    50% {
+        transform : scale(1.05);
+    }
+    100% {
+        transform: scale(1)
+    }
+}
 
 .btn:active {
-    transform: scale(1.05);
+    animation: scaleUp ease-in 100ms;
 }
 
 .btn-warning {
@@ -33,4 +43,9 @@
 .btn-danger {
     background: red;
     color:white;
+}
+
+.btn-classic {
+    background-color: #888888;
+    color : whitesmoke;
 }
