--- a/src/view/Global/TimeBoard/Steps.css
+++ b/src/view/Global/TimeBoard/Steps.css
@@ -7,11 +7,7 @@ div.Step {
     border-bottom: solid 2px #333333;
     /*border-left: solid 2px #333333;*/
     /*border-right: solid 2px #333333;*/
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    align-content: center;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between !important;
@@ -35,13 +31,24 @@ div.Step.skipped {
 }
 
 
-div.Step p {
-    margin: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
+div.Step p, div.Step span {
+    display: flex;
+    justify-content: left;
+    align-items: center;
     text-align: left;
+    font-size: 1.3rem;
+
+    padding: 0 1rem;
+
+    height: 5rem;
+}
+
+div.Step  p {
+    width: 16vw;
 }
 
 div.Step span {
+    width: 2rem;
     padding-right: 1rem;
 }
+
