AskName : place for 20 names && propTypes definition
Former-commit-id: e5d1c85b5540787e9e7af7a1ab8e52276b016d9c

--- a/src/App.css
+++ b/src/App.css
@@ -54,12 +54,12 @@ div.component.leftPart {
 }
 
 button.ok, button.btn-ok {
-    background: green;
+    background: rgb(81, 156, 81);
     color: white
 }
 
 button.no, button.btn-no{
-    background: #BE0B0B;
+    background: #B67373;
     color : white
 }
 
