--- a/src/index.css
+++ b/src/index.css
@@ -7,27 +7,30 @@
     background-color: transparent;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
-    font-size: calc(1vw + 0.75rem);
+    font-size: calc(1vw + 0.5rem);
     line-height: 1.5;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 @keyframes scaleUp {
     0% {
-        transform: scale(1)
+        filter: invert(0%);
     }
-    50% {
-        transform : scale(1.05);
-    }
+
     100% {
-        transform: scale(1)
+        filter: invert(100%);
+
     }
 }
 
-.btn:active {
-    animation: scaleUp ease-in 100ms;
+.btn.animated:hover {
+    animation: scaleUp ease-in-out 500ms forwards;
 }
 
 .btn-warning {
