--- a/src/view/Global/Confirm/Confirm.css
+++ b/src/view/Global/Confirm/Confirm.css
@@ -1,4 +1,4 @@
-div.choice {
+div.choices {
     display: flex;
     width: 100%;
     height: 100%;
@@ -10,13 +10,17 @@ div.choice {
 
 }
 
-div.choice button {
+div.choices button {
     width: 5rem;
     height: 5rem;
     margin-right: 3rem;
     border-radius: 3rem;
 }
 
-div.choice button.btn-ok {
+div.choices button.btn-ok {
     width: 20rem;
+}
+
+div.choices button.btn-no {
+    width: 10rem;
 }
