Set <ComponentTitle> in all component's render
Former-commit-id: 0b6f9ea018f9ed6178037444edaa28b938ce8b94

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,13 @@
     }
 }
 
+.ComponentTitle {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+    font-size: 3.5rem;
+}
+
 .btn.animated:hover {
     animation: scaleUp ease-in-out 500ms forwards;
 }
