Fix display in guest view
Former-commit-id: 2c460975f1b2bc3f75be733e01cfff0b8a9326fc

--- a/src/view/Global/TimeBoard/TimeBoard.css
+++ b/src/view/Global/TimeBoard/TimeBoard.css
@@ -3,12 +3,15 @@ div.TimeBoard {
     flex-direction: column;
     justify-content: center;
     /*align-items: center;*/
-    height: 89vh;
+    height: 91vh;
     width: initial;
     padding: 0 !important;
 
 }
 
+div.TimeBoard .ComponentTitle {
+    margin-bottom: 3rem !important;
+}
 
 div.TimeBoard div#steps {
     /*display: flex;*/
