--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-
 p, h1, h2, h3, h4, h5, h6, span {
     z-index: 100000;
     /*font-size: large;*/
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', monospace;
+    font-family: Verdana;
 }
 
 
