--- a/src/view/Scenario/Receptionist/PresentPeople/Guest.css
+++ b/src/view/Scenario/Receptionist/PresentPeople/Guest.css
@@ -2,6 +2,7 @@ div.Guest {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: space-between;
     align-items: center;
 }
 
