--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ p, h1, h2, h3, h4, h5, h6, span {
     /*font-size: large;*/
     margin: 0;
     padding: 0;
-    font-family: Verdana;
+    font-family: Roboto, sans-serif;
 }
 
 
@@ -25,9 +25,9 @@ html, body, div#root, div.App {
 
 
 button {
-    background: #626262;
-    color: #f5f5f5;
 
+    background-color: #4fcfff;
+    color: white;
 }
 
 
