--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,43 @@
+/* Roboto regular */
+
+/*TODO CARE Hardcoded path for fonts*/
+
+@font-face {
+    font-family: "Roboto";
+    src: url("/apps/R2019/fonts/Roboto-Regular.eot");
+    src: url("/apps/R2019/fonts/Roboto-Regular.eot?#iefix") format('embedded-opentype'),
+    url("/apps/R2019/fonts/Roboto-Regular.woff2") format('woff2'),
+    url("/apps/R2019/fonts/Roboto-Regular.woff") format('woff'),
+    url("/apps/R2019/fonts/Roboto-Regular.ttf") format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* Roboto italic */
+
+@font-face {
+    font-family: "Roboto";
+    src: url('/apps/R2019/fonts/Roboto-Italic.eot');
+    src: url('/apps/R2019/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),
+    url('/apps/R2019/fonts/Roboto-Italic.woff2') format('woff2'),
+    url('/apps/R2019/fonts/Roboto-Italic.woff') format('woff'),
+    url('/apps/R2019/fonts/Roboto-Italic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+
+/* Roboto bold */
+
+@font-face {
+    font-family: "Roboto";
+    src: url('/apps/R2019/fonts/Roboto-Bold.eot');
+    src: url('/apps/R2019/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+    url('/apps/R2019/fonts/Roboto-Bold.woff2') format('woff2'),
+    url('/apps/R2019/fonts/Roboto-Bold.woff') format('woff'),
+    url('/apps/R2019/fonts/Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
 
 .btn, button {
     display: inline-block;
@@ -62,6 +102,22 @@
 }
 
 .btn-classic {
-    background-color: #888888;
-    color: whitesmoke;
+    background-color: #793dcb;
+    color: white;
+    font-family: Roboto, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    font-size: .875rem;
+    line-height: 2.25rem;
+    font-weight: 500;
+    letter-spacing: .0892857143em;
+    text-decoration: none;
+    text-transform: uppercase;
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    overflow: hidden;
+    vertical-align: middle;
+    border-radius: 4px;
 }
