--- a/src/AppDark.css
+++ b/src/AppDark.css
@@ -1,52 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-
-p, h1, h2, h3, h4, h5, h6, span {
-    z-index: 100000;
-    /*font-size: large;*/
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', monospace;
-    color: white
-}
-
-
-/*Prevent selection*/
-* {
-    user-select: none;
-}
-
-html, body, div#root, div.App {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-
-
-}
-
-/*// voir  / bouger */
-
-
-div.hidden {
-    display: none;
-}
-
-div.component {
-    margin: 1rem;
-    background-color: #1E1E1E;
-    border-radius: 0.2rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .16), 0 2px 4px rgba(0, 0, 0, .23);
-
-}
-
-div.component.scenarioTitle {
-    margin-left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5em 1rem;
-}
 
 
 div.App {
@@ -56,10 +7,10 @@ div.App {
 }
 
 
-div.App button {
-    background: #51ff95;
-    color: #1E1E1E;
-}
+/*div.App button {*/
+/*    background: #51ff95;*/
+/*    color: #1E1E1E;*/
+/*}*/
 
 
 div.App > div#rightPart {
@@ -97,5 +48,104 @@ div.App div.Toolbar {
 
 div.App div.Debug {
 
+}
+
+p, h1, h2, h3, h4, h5, h6, span {
+    z-index: 100000;
+    /*font-size: large;*/
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    color: white;
+}
+
+
+/*Prevent selection*/
+* {
+    user-select: none;
+}
+
+html, body, div#root, div.App {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+
+
+}
+
+/*// voir  / bouger */
+
+
+button {
+    background: #51ff95;
+    color: #1E1E1E;
+}
+
+
+div.hidden {
+    display: none;
+}
+
+div.component {
+    margin: 1rem;
+    background-color: #1b1b1b;
+    border-radius: 0.8rem;
+    /*box-shadow: 0 2px 4px rgba(0,0,0,.16),0 2px 4px rgba(0,0,0,.23);*/
+    box-shadow: 10px 10px 8px -6px rgb(27, 27, 27);
+    z-index: 3;
+
+}
+
+div.component.leftPart {
+    width: initial;
+
+}
+
+button.ok, button.btn-ok {
+    background: rgb(81, 156, 81);
+    color: white
+}
+
+button.no, button.btn-no {
+    background: #B67373;
+    color: white
+}
+
+button.warn {
+    background: #b49124;
+    color: white
+}
+
+div.component.scenarioTitle {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 1rem;
+}
+
+
+/*div.App {*/
+/*    background-color: #EFF0F1;*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*}*/
+
+
+
+
+
+div#rightPart > div.component {
+    height: 100%;
+}
+
+div#rightPart > div#header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0;
+    height: initial;
+    margin: 1rem;
 }
 
