--- a/src/view/Scenario/MainMenu/MainMenu.css
+++ b/src/view/Scenario/MainMenu/MainMenu.css
@@ -1,11 +1,11 @@
 div.MainMenu button {
     font-size: xx-large;
-    margin: 0 2rem;
+    margin: 0 2rem 4rem;
+    padding: 0.5rem 1rem;
 }
 div.MainMenu > div {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 65vh
