Add viewOk for views AskToFollow, PresentPeople SeatGuest && add button to ShowVideo
Former-commit-id: e70f2c4ad0be435ccf38b3eae4abaf773c778166

--- a/src/view/Scenario/TakeOutTheGarbage/ShowVideo/ShowVideo.css
+++ b/src/view/Scenario/TakeOutTheGarbage/ShowVideo/ShowVideo.css
@@ -5,18 +5,31 @@ div.ShowVideo {
     align-items: center;
 }
 
+div.ShowVideo button {
+    width: 10rem;
+    font-size: larger;
+    padding: 1rem;
+}
+
 div.ShowVideo > div {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    position: relative;
 }
 
-div.ShowVideo > div > video {
-    width: 70%;
-    margin: 1rem 3rem 1rem 1rem; /*left right top bottom*/
+div.ShowVideo > div > * {
+    margin: 1rem;
+}
+
+div.ShowVideo > div > div.video {
+    width: 65%;
+}
+div.ShowVideo > div > div > video {
+    width: 100%;
+    height: auto;
 }
 
 div.ShowVideo > div > ul {
-    width: 30%;
+    /*width: 30%;*/
 }
