--- a/src/view/Global/AskDrink/AskDrink.css
+++ b/src/view/Global/AskDrink/AskDrink.css
@@ -9,6 +9,10 @@ div.drinks > div {
 div.drinks > div > * {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 button.actionBtn {
@@ -24,9 +28,7 @@ div.drinks {
 }
 
 div.drinks button {
-    /*width: 9rem;*/
 
-    /*height: 10rem;*/
 }
 
 div#AskDrink {
