Add format for ShowVideo && Steps reset
Former-commit-id: 8e32a8880a5026dd10042c7a90fcec3523da70c6

--- a/src/view/Global/ShowVideo/ShowVideo.css
+++ b/src/view/Global/ShowVideo/ShowVideo.css
@@ -22,7 +22,7 @@ div.ShowVideo > div > * {
     margin: 1rem;
 }
 
-div.ShowVideo > div > div.video {
+ div.video.large {
     width: 65%;
 }
 div.ShowVideo > div > div > video {
@@ -32,4 +32,12 @@ div.ShowVideo > div > div > video {
 
 div.ShowVideo > div > ul {
     /*width: 30%;*/
+}
+div.text {
+    display: flex;
+    flex-direction: column;
+}
+
+div.video.tall {
+    width: 50%;
 }
