Definitely remove security for jury inputs
Former-commit-id: a38b90818aa815d7178c613dc633d2fb4e059251

--- a/src/view/Global/Logo/Logo.css
+++ b/src/view/Global/Logo/Logo.css
@@ -1,5 +1,6 @@
 div.Logo {
     display: flex;
+    align-items: center;
     flex-direction: row;
     margin: 0 0 0 1rem;
 
@@ -7,8 +8,7 @@ div.Logo {
 
 div.Logo > img {
     margin-right: 1rem;
-    width: auto;
-    min-height: calc(80% / 6);
+    width: 2.2rem;
 }
 
 div.logo {
