--- a/src/App.css
+++ b/src/App.css
@@ -46,8 +46,11 @@ div.component {
 }
 
 div.component.leftPart {
-    width: initial;
+    width: 30% !important;
+}
 
+div.component.main {
+    height: 79vh;
 }
 
 button.ok, button.btn-ok {
@@ -84,22 +87,20 @@ div.App {
 div.App > div#rightPart {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
+    width: 70% !important;;
 
 }
 
 
 div#rightPart > div.component {
-    height: 100%;
+    /*height: 100%;*/
 }
 
 div#rightPart > div#header {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    /*align-items: center;*/
     padding: 0;
-    height: initial;
     margin: 1rem;
 }
 
