--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@
 }
 
 .ComponentTitle {
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
     margin-top: 1rem;
     text-align: center;
     font-size: 2.5rem;
@@ -93,6 +93,12 @@
 .btn-danger {
     background: red;
     color: white;
+}
+
+
+.btn-classic:active {
+    background: #51ff95;
+    color: black
 }
 
 .btn-classic {
