--- a/src/view/Global/MainMenu/MainMenu.css
+++ b/src/view/Global/MainMenu/MainMenu.css
@@ -8,6 +8,5 @@ div.MainMenu > div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
-    height: 65vh
+    justify-content: center;
 }
