--- a/src/view/Global/Wait/Wait.css
+++ b/src/view/Global/Wait/Wait.css
@@ -1,12 +1,12 @@
 div#chart {
     width: 75%;
     /*height: 50vh;*/
+    margin-top: 4rem;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 66vh;
 
 }
 
