--- a/src/view/ViewManager/index.css
+++ b/src/view/ViewManager/index.css
@@ -1,15 +1,17 @@
-div.App div.ViewManager {
-    /*width: 95%;*/
-    /*height: 100%;*/
-}
+div.ViewManager {
+    width: 100%;
+    height: 76vh;
 
+}
 .viewTitle {
     text-align: center;
     padding: 1rem 0;
     font-size: calc(1.5rem + 0.25vw);
 }
 
-div.ViewManager > div {
-
-    /*height: 70vh;*/
+div.component.main {
+    height: 79vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
