Allow pepper 1.8a to emit events
Former-commit-id: 3e5a1f6af12b815f3e6cabee26b2a8dec933c58c

--- a/src/index.css
+++ b/src/index.css
@@ -13,25 +13,25 @@
 
 /* Roboto italic */
 
-@font-face {
-    font-family: "Roboto";
-    src: url('/apps/R2019/fonts/Roboto-Italic.eot');
-    src: url('/apps/R2019/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),
-    url('/apps/R2019/fonts/Roboto-Italic.ttf') format('truetype');
-    font-weight: 400;
-    font-style: italic;
-}
+/*@font-face {*/
+/*    font-family: "Roboto";*/
+/*    src: url('/apps/R2019/fonts/Roboto-Italic.eot');*/
+/*    src: url('/apps/R2019/fonts/Roboto-Italic.eot?#iefix') format('embedded-opentype'),*/
+/*    url('/apps/R2019/fonts/Roboto-Italic.ttf') format('truetype');*/
+/*    font-weight: 400;*/
+/*    font-style: italic;*/
+/*}*/
 
-/* Roboto bold */
+/*!* Roboto bold *!*/
 
-@font-face {
-    font-family: "Roboto";
-    src: url('/apps/R2019/fonts/Roboto-Bold.eot');
-    src: url('/apps/R2019/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
-    url('/apps/R2019/fonts/Roboto-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
+/*@font-face {*/
+/*    font-family: "Roboto";*/
+/*    src: url('/apps/R2019/fonts/Roboto-Bold.eot');*/
+/*    src: url('/apps/R2019/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'),*/
+/*    url('/apps/R2019/fonts/Roboto-Bold.ttf') format('truetype');*/
+/*    font-weight: 700;*/
+/*    font-style: normal;*/
+/*}*/
 
 .btn, button {
     display: inline-block;
