--- a/src/AppDark.css
+++ b/src/AppDark.css
@@ -31,6 +31,7 @@ div.App > div#rightPart > div {
 div#rightPart > div#header {
     display: flex;
     flex-direction: row;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
@@ -121,7 +122,8 @@ div.component.scenarioTitle {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem 1rem;
+    padding: 0 1rem;
+    height: 106px;
 }
 
 
