Updating LookForGuest view for Receptionist

--- a/src/view/Scenario/Receptionist/LookForGuest/LookForGuest.css
+++ b/src/view/Scenario/Receptionist/LookForGuest/LookForGuest.css
@@ -5,3 +5,13 @@ div.LookForGuest {
     align-items: center;
     height: 76vh;
 }
+
+
+div#chart span {
+    position: absolute;
+    top: calc(50% - 1.8rem);
+    font-size: 3rem;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+}
